force-app/main/default/objects/Unit_Item__c/Unit_Item__c.object-meta.xml
<CustomObject>
    <label>Unit Item</label>
    <nameField>
        <displayFormat>UI-{0000}</displayFormat>
        <label>Unit Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>