force-app/main/default/objects/Unit_Item__c/fields/Game_Unit__c.field-meta.xml
<CustomField>
    <fullName>Game_Unit__c</fullName>
    <label>Game Unit</label>
    <referenceTo>Game_Unit__c</referenceTo>
    <relationshipLabel>Unit Items</relationshipLabel>
    <relationshipName>Unit_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>