force-app/main/default/objects/Unit_Item__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>